--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "backend application for the intranet",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "francis wayungi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "date-fns": "^4.1.0",
+    "nodemon": "^3.1.7",
+    "uuid": "^10.0.0"
+  }
 }
