--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "francis wayungi",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
